--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 App/Production/key.plist
 App/Staging/key.plist
+
+# Swift Package Manager
+#
+# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
+# Packages/
+# Package.pins
+# Package.resolved
+.build/
