--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 App/Production/key.plist
 App/Staging/key.plist
 
+.DS_Store
+
 # Swift Package Manager
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
 # Packages/
 # Package.pins
 # Package.resolved
-.build/
+# .build/
